atualiza nomenclatura dos metodos de teste para seguir convencao